hypertrain/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypertrain-relay
spec:
  type: ClusterIP
  selector:
    app: hypertrain-relay
  ports:
    - {name: http, port: 8000, targetPort: http}
